// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stylelint default 1`] = `
Array [
  .stylelintignore,
  package.json,
  stylelint.config.js,
]
`;

exports[`stylelint with-githooks 1`] = `
Array [
  .huskyrc,
  .stylelintignore,
  package.json,
  stylelint.config.js,
]
`;
